--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,7 @@
         .usr ul{
             display: block;
             position: absolute;
+            width: 163px;
             bottom: 35px;
             left: -60px;
             padding: 1px 5px;
@@ -48,7 +49,7 @@
             height: 0;
             bottom: -10px;
             left: 50%;
-            margin-left: -40px;
+            margin-left: -30px;
             border-top: 10px solid rgb(225, 225, 225);
             border-right: 10px solid transparent;
             border-left: 10px solid transparent;
@@ -222,7 +223,12 @@
         shout: function(shoutObj) {
             var userDom = $("#farm").children("#usr" + shoutObj.clientName)[0];
 
-            $("ul li #shout", userDom).parent().before("<li>" + shoutObj.text + "</li>");
+            if(userInfo.clientName == shoutObj.clientName) {
+                $("ul li #shout", userDom).parent().before("<li>" + shoutObj.text + "</li>");
+            } else {
+                $("ul", userDom).css({ display: "block" });
+                $("ul", userDom).append("<li>" + shoutObj.text + "</li>");
+            }
         },
         shoutAck: function() {
             // In Next Version
