--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,8 @@
     <script src="http://localhost:8080/socket.io/socket.io.js" type="text/javascript"></script>
     
     <style type="text/css">
+        *{ margin:0; padding:0; outline:none; }
         body{
-            margin: 0;
-            padding: 0;
             font-family: tahoma, arial, verdana;
         }
         .usr{
@@ -32,10 +31,10 @@
             display: block;
             position: absolute;
             width: 163px;
-            bottom: 35px;
+            bottom: 45px;
             left: -60px;
             padding: 1px 5px;
-            background-color: rgb(225, 225, 225);
+            background-color: rgba(225, 225, 225, .75);
             border-radius: 5px;
             font-size: 10px;
             list-style: none;
@@ -50,7 +49,7 @@
             bottom: -10px;
             left: 50%;
             margin-left: -30px;
-            border-top: 10px solid rgb(225, 225, 225);
+            border-top: 10px solid rgba(225, 225, 225, .8);
             border-right: 10px solid transparent;
             border-left: 10px solid transparent;
         }
@@ -58,15 +57,19 @@
             display: block;
             padding: 10px 2px;
             color: #555;
-            text-shadow: 0 0 1px rgba(50, 50, 50, .3);
+            text-shadow: 0 0 1px rgba(50, 50, 50, .2);
         }
         .usr li:not(:last-child){
             border-bottom: 1px solid rgba(150, 150, 150, .5);
         }
+        .usr li:not(:first-child){
+            border-top: 1px solid rgba(255, 255, 255, .3);
+        }
         #shout{
-            border: 1px solid rgb(150, 150, 150);
+            background-color: rgba(255, 255, 255, .3);
+            border: 1px solid rgba(150, 150, 150, .7);
             border-radius: 20px;
-            box-shadow: 0 0 3px rgba(0, 0, 0, .2);
+            box-shadow: 0 0 3px rgba(50, 50, 50, .2);
             padding: 3px 7px;
         }
         .reid{
@@ -225,18 +228,23 @@
         },
         shout: function(shoutObj) {
             var userDom = $("#farm").children("#usr" + shoutObj.clientName)[0];
-            var shoutFieldItemDom = $("ul li #Shout").parent();
+            var shoutDom = $("<li style='display:none;'>" + shoutObj.text + "</li>");
+            var shoutFieldItemDom = $("ul li #shout").parent();
             var shoutCnt = $(userDom).find("ul li").not(shoutFieldItemDom).length;
             if(shoutCnt >= MAX_SHOUT_COUNT) {
-                $(userDom).find("ul li:first-child").remove();
+                $(userDom).find("ul li:first-child").slideUp('fast', function() {
+                    $(this).remove();
+                });
             }
 
             if(userInfo.clientName == shoutObj.clientName) {
-                $("ul li #shout", userDom).parent().before("<li>" + shoutObj.text + "</li>");
+                $("ul li #shout", userDom).parent().before(shoutDom);
             } else {
                 $("ul", userDom).css({ display: "block" });
-                $("ul", userDom).append("<li>" + shoutObj.text + "</li>");
+                $("ul", userDom).append(shoutDom);
             }
+
+            $("ul", userDom).find(shoutDom).slideDown();
         },
         shoutAck: function() {
             // In Next Version
